Redesigned the directory structure to support improved security. The tool is now designed with sudo support in mind, using a wrapper to manage the ark servers. Sudo configuration information is included in this version.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -75,3 +75,9 @@ a:link h2, a:visited h2, a:active h2, a h2, h2 {
 	margin-left: -25em;
 	width: 50em;
 }
+.clustercmds {
+	margin-top: 0.5em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	background: #c2b280;
+}
